--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,35 +1,128 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx"],
-  "overrides": [
-    {
-      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {
-        "@nrwl/nx/enforce-module-boundaries": [
-          "error",
-          {
-            "enforceBuildableLibDependency": true,
-            "allow": [],
-            "depConstraints": [
-              {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
-              }
-            ]
-          }
-        ]
+  "plugins": [
+    "@nrwl/nx",
+    "react",
+    "react-hooks",
+    "@typescript-eslint",
+    "prettier",
+    // "simple-import-sort",
+    "import"
+  ],
+  "extends": [
+    // "airbnb",
+    // "airbnb-typescript",
+    // "airbnb/hooks",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:import/recommended",
+    "plugin:import/typescript"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": "./tsconfig.base.json"
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": "off",
+    "import/no-named-as-default": "off",
+    "react/react-in-jsx-scope": "off",
+    "linebreak-style": "off",
+    "react/jsx-props-no-spreading": "off",
+    // "no-console": "error",
+    "no-var": "warn",
+    "@typescript-eslint/no-floating-promises": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "spaced-comment": ["error", "always"],
+    "eqeqeq": ["error", "smart"],
+    "no-else-return": "warn",
+    "no-empty-function": "warn",
+    "react/require-default-props": "off",
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/ban-ts-ignore": "off",
+    "max-len": [
+      "error",
+      {
+        "code": 120
       }
-    },
-    {
-      "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nrwl/nx/typescript"],
-      "rules": {}
-    },
-    {
-      "files": ["*.js", "*.jsx"],
-      "extends": ["plugin:@nrwl/nx/javascript"],
-      "rules": {}
-    }
+    ],
+    "array-callback-return": "warn",
+    "import/prefer-default-export": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/prefer-optional-chain": "warn",
+    "@typescript-eslint/no-loss-of-precision": "off",
+    "react/button-has-type": "off",
+    "no-plusplus": "off",
+    "no-param-reassign": "off"
+  },
+  "overrides": [
+    // {
+    //   "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+    //   "rules": {
+    //     "@nx/enforce-module-boundaries": [
+    //       "error",
+    //       {
+    //         "enforceBuildableLibDependency": true,
+    //         "allow": [],
+    //         "depConstraints": [
+    //           {
+    //             "sourceTag": "*",
+    //             "onlyDependOnLibsWithTags": ["*"]
+    //           }
+    //         ]
+    //       }
+    //     ]
+    //   }
+    // }
+    // {
+    //   "files": ["*.ts", "*.tsx"],
+    //   "extends": ["plugin:@nx/typescript"],
+    //   "rules": {}
+    // },
+    // {
+    //   "files": ["*.js", "*.jsx"],
+    //   "extends": ["plugin:@nx/javascript"],
+    //   "rules": {}
+    // },
+    // {
+    //   "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
+    //   "env": {
+    //     "jest": true
+    //   },
+    //   "rules": {}
+    // },
+    // {
+    //   "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+    //   "rules": {
+    //     "@nrwl/nx/enforce-module-boundaries": [
+    //       "error",
+    //       {
+    //         "enforceBuildableLibDependency": true,
+    //         "allow": [],
+    //         "depConstraints": [
+    //           {
+    //             "sourceTag": "*",
+    //             "onlyDependOnLibsWithTags": ["*"]
+    //           }
+    //         ]
+    //       }
+    //     ]
+    //   }
+    // },
+    // {
+    //   "files": ["*.ts", "*.tsx"],
+    //   "extends": ["plugin:@nrwl/nx/typescript"],
+    //   "rules": {}
+    // },
+    // {
+    //   "files": ["*.js", "*.jsx"],
+    //   "extends": ["plugin:@nrwl/nx/javascript"],
+    //   "rules": {}
+    // }
   ]
 }
