--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nrwl/tao": "13.8.3",
     "@nrwl/web": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@nx/eslint-plugin": "^18.3.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
@@ -54,12 +55,16 @@
     "babel-jest": "27.2.3",
     "cypress": "^8.3.0",
     "eslint": "8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "jest": "27.2.3",
     "prettier": "2.5.1",
     "ts-jest": "27.0.5",
