--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "license-checker": "^25.0.1",
     "open": "^8.4.0",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-pdf": "^5.7.1",
