--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,9 +9,9 @@
 		"noImplicitReturns": false,
 		"experimentalDecorators": true,
 		"importHelpers": true,
-		"target": "es2015",
+		"target": "ES2021",
 		"module": "esnext",
-		"lib": ["es2017", "dom"],
+		"lib": ["dom", "dom.iterable", "esnext"],
 		"skipLibCheck": true,
 		"skipDefaultLibCheck": true,
 		"baseUrl": ".",
