--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,7 @@
 				"pathGroups": [
 					{
 						"pattern": "react",
-						"group": "external",
+						"group": "builtin",
 						"position": "before"
 					}
 				],
