--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "core-js": "^3.6.5",
     "cross-fetch": "^3.1.4",
     "express": "^4.17.3",
+    "history": "^5.3.0",
     "license-checker": "^25.0.1",
     "open": "^8.4.0",
     "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-pdf": "^5.7.1",
+    "react-router-dom": "^6.22.3",
     "regenerator-runtime": "0.13.7",
     "spdx-correct": "^3.1.1",
     "spdx-satisfies": "^5.0.1",
