update env file

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NX_BASE_URL = https://api.edamam.com/api/recipes/v2
 NX_EDAMAM_APP_ID = 41ae5808
 NX_EDAMAM_APP_KEY = 8ce6a2480d8d3cf5a0f4f86addfb06f6
+NODE_ENV = production
